--- a/babel.config.json
+++ b/babel.config.json
@@ -1,8 +1,5 @@
 {
-    "presets": [
-        ["@babel/preset-env", {"targets": {"node": "current"}}],
-        "@babel/preset-typescript"
-    ],
+    "presets": ["@babel/preset-env", "@babel/preset-typescript"],
     "plugins": [
         "i18next-extract"
     ]
