--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "jest --config config/jest/jest.config.ts",
-        "test:loki": "npx loki",
-        "test:loki:approve": "npx loki",
         "start": "webpack serve --env port=3000",
         "build:prod": "webpack --env mode=production",
         "build:dev": "webpack --env mode=development",
+        "test": "jest --config config/jest/jest.config.ts",
+        "test:screenshot": "npx loki",
+        "test:screenshot:approve": "npx loki",
         "lint": "eslint \"**/*.{ts,tsx}\"",
+        "lint:all": "eslint \"**/*.{ts,tsx}\" && stylelint \"**/*.{css,scss}\"",
         "lint:fix": "eslint \"**/*.{ts,tsx}\" --fix",
         "lint:scss": "stylelint \"**/*.{css,scss}\"",
         "lint:scss:fix": "stylelint \"**/*.{css,scss}\" --fix",
