--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,3 +28,7 @@ jobs:
         run: npm run lint:all
       - name: Run unit tests
         run: npm run test
+      - name: Build storybook
+        run: npm run storybook:build
+      - name: Run screenshot tests
+        run: npm run test:screenshot:ci
