[fix] ci screenshot tests with docker

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "test": "jest --config config/jest/jest.config.ts",
         "test:screenshot": "npx loki",
         "test:screenshot:approve": "npx loki approve",
-        "test:screenshot:ci": "concurrently --kill-others --raw --success first 'loki --requireReference --reactUri file:./storybook-static' 'deelay'",
+        "test:screenshot:ci": "loki --requireReference --reactUri file:./storybook-static",
         "lint": "eslint \"**/*.{ts,tsx}\"",
         "lint:all": "eslint \"**/*.{ts,tsx}\" && stylelint \"**/*.{css,scss}\"",
         "lint:fix": "eslint \"**/*.{ts,tsx}\" --fix",
@@ -18,7 +18,7 @@
         "lint:scss:fix": "stylelint \"**/*.{css,scss}\" --fix",
         "lint:fix:all": "eslint \"**/*.{ts,tsx}\" --fix && stylelint \"**/*.{css,scss}\" --fix",
         "storybook": "start-storybook -p 6006 -c ./config/storybook",
-        "storybook:build": "build-storybook -c ./config/storybook --quiet"
+        "storybook:build": "build-storybook -c ./config/storybook"
     },
     "keywords": [],
     "author": "",
@@ -54,7 +54,6 @@
         "babel-plugin-i18next-extract": "^0.8.3",
         "copy-webpack-plugin": "^10.2.4",
         "css-loader": "^6.6.0",
-        "deelay": "^2.0.0",
         "eslint": "^8.10.0",
         "eslint-config-airbnb": "^19.0.4",
         "eslint-plugin-i18next": "^5.1.2",
