[feat] add strict mode, add some types, fix come tests

--- a/babel.config.json
+++ b/babel.config.json
@@ -10,6 +10,11 @@
     ]
   ],
   "plugins": [
-    "i18next-extract"
+    ["i18next-extract", {
+      "locales": ["en", "ru"],
+      "defaultNS": "translation",
+      "outputPath": "public/locales/{{locale}}/{{ns}}.json",
+      "keyAsDefaultValue": true
+    }]
   ]
 }
