--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
         "babel-loader": "^8.2.3",
         "babel-plugin-i18next-extract": "^0.8.3",
         "concurrently": "^7.6.0",
+        "copy-webpack-plugin": "^10.2.4",
         "css-loader": "^6.6.0",
         "eslint": "^8.10.0",
         "eslint-config-airbnb": "^19.0.4",
