--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
         "@svgr/webpack": "^6.2.1",
         "@testing-library/jest-dom": "^5.16.2",
         "@testing-library/react": "^12.1.3",
+        "@testing-library/user-event": "^14.4.3",
         "@types/jest": "^27.4.1",
         "@types/node": "^17.0.21",
         "@types/react": "^17.0.39",
@@ -74,6 +75,7 @@
         "husky": "^7.0.0",
         "identity-obj-proxy": "^3.0.0",
         "jest": "^27.5.1",
+        "jest-html-reporters": "^3.1.4",
         "json-server": "^0.17.0",
         "loki": "^0.28.1",
         "mini-css-extract-plugin": "^2.5.3",
