--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
         "storybook": "start-storybook -p 6006 -c ./config/storybook",
         "storybook:build": "build-storybook -c ./config/storybook",
         "prepare": "husky install",
-        "create:slice": "node ./scripts/createSlice/index.js"
+        "create:slice": "node ./scripts/createSlice/index.js",
+        "postinstall": "rm -rf ./node-modules/.cache"
     },
     "keywords": [],
     "author": "",
