--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "start:dev:server": "node ./json-server/index.js",
         "start:vite": "vite",
         "start:dev:vite": "concurrently \"npm run start:vite\" \"npm run start:dev:server\"",
-        "build:prod": "webpack  --env mode=production --progress -p",
+        "build:prod": "webpack --progress -p  --env mode=production",
         "build:dev": "webpack  --env mode=development",
         "prettier": "npx prettier --write  \"src/**/*.{js,ts,tsx,json}\"",
         "lint:ts": "eslint \"src/**/*.{ts,tsx}\"",
@@ -31,7 +31,10 @@
         "postinstall": "rm -rf ./node-modules/.cache"
     },
     "lint-staged": {
-        "src/**/*.{js,ts,tsx,json}": ["eslint", "prettier --list-different"]
+        "src/**/*.{js,ts,tsx,json}": [
+            "eslint",
+            "prettier --list-different"
+        ]
     },
     "keywords": [],
     "author": "",
@@ -109,6 +112,7 @@
         "style-loader": "^3.3.1",
         "stylelint": "^14.5.3",
         "stylelint-config-standard-scss": "^3.0.0",
+        "terser-webpack-plugin": "^5.3.9",
         "ts-loader": "^9.2.6",
         "ts-morph": "^16.0.0",
         "ts-node": "^10.5.0",
