--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "start:dev:server": "node ./json-server/index.js",
         "start:vite": "vite",
         "start:dev:vite": "concurrently \"npm run start:vite\" \"npm run start:dev:server\"",
-        "build:prod": "webpack --progress -p  --env mode=production",
+        "build:prod": "webpack --env mode=production  --progress",
         "build:dev": "webpack  --env mode=development",
         "prettier": "npx prettier --write  \"src/**/*.{js,ts,tsx,json}\"",
         "lint:ts": "eslint \"src/**/*.{ts,tsx}\"",
