--- a/package.json
+++ b/package.json
@@ -152,6 +152,7 @@
                 "width": 1366,
                 "height": 768
             },
+            "fetchFailIgnore": true,
             "chrome.iphone7": {
                 "target": "chrome.docker",
                 "preset": "iPhone 7"
