--- a/package.json
+++ b/package.json
@@ -127,7 +127,8 @@
     },
     "dependencies": {
         "@editorjs/code": "^2.8.0",
-        "@editorjs/editorjs": "^2.26.5",
+        "@editorjs/editorjs": "^2.27.0",
+        "@editorjs/header": "^2.7.0",
         "@editorjs/image": "^2.8.1",
         "@editorjs/paragraph": "^2.9.0",
         "@headlessui/react": "^1.6.6",
