--- a/package.json
+++ b/package.json
@@ -140,6 +140,7 @@
         "i18next": "^21.9.0",
         "i18next-browser-languagedetector": "^6.1.3",
         "i18next-http-backend": "^1.3.2",
+        "nanoid": "^4.0.2",
         "react": "^18.2.0",
         "react-device-detect": "^2.2.2",
         "react-dom": "^18.2.0",
