--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -2,6 +2,12 @@
   "extends": "stylelint-config-standard-scss",
   "rules": {
     "indentation": [4],
-    "selector-class-pattern": null
+    "selector-class-pattern": null,
+    "selector-pseudo-class-no-unknown": [
+      true,
+      {
+        "ignorePseudoClasses": ["global"]
+      }
+    ]
   }
 }
