--- a/package.json
+++ b/package.json
@@ -131,20 +131,28 @@
         "@editorjs/header": "^2.7.0",
         "@editorjs/image": "^2.8.1",
         "@editorjs/paragraph": "^2.9.0",
+        "@fortawesome/fontawesome-svg-core": "^6.4.0",
+        "@fortawesome/free-brands-svg-icons": "^6.4.0",
+        "@fortawesome/free-solid-svg-icons": "^6.4.0",
+        "@fortawesome/react-fontawesome": "^0.2.0",
         "@headlessui/react": "^1.6.6",
         "@react-spring/web": "^9.5.2",
         "@reduxjs/toolkit": "^1.9.0",
         "@use-gesture/react": "^10.2.19",
+        "animate.css": "^4.1.1",
         "axios": "^0.26.1",
         "concurrently": "^7.0.0",
+        "gsap-trial": "^3.12.1",
         "i18next": "^21.9.0",
         "i18next-browser-languagedetector": "^6.1.3",
         "i18next-http-backend": "^1.3.2",
+        "leaflet": "^1.9.4",
         "nanoid": "^4.0.2",
         "react": "^18.2.0",
         "react-device-detect": "^2.2.2",
         "react-dom": "^18.2.0",
         "react-i18next": "^11.18.3",
+        "react-loaders": "^3.0.1",
         "react-redux": "^8.0.5",
         "react-router-dom": "^6.2.1"
     },
