--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^14.3.0",
         "@types/circular-dependency-plugin": "^5.0.5",
+        "@types/gsap": "^3.0.0",
         "@types/jest": "^27.4.1",
         "@types/node": "^17.0.21",
         "@types/react": "^18.0.17",
@@ -142,7 +143,7 @@
         "animate.css": "^4.1.1",
         "axios": "^0.26.1",
         "concurrently": "^7.0.0",
-        "gsap-trial": "^3.12.1",
+        "gsap": "npm:@gsap/member@^3.12.2",
         "i18next": "^21.9.0",
         "i18next-browser-languagedetector": "^6.1.3",
         "i18next-http-backend": "^1.3.2",
