[fix] try some fixe

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,7 +37,8 @@
   },
   "ts-node": {
     "compilerOptions": {
-      "module": "CommonJS"
+      "module": "CommonJS",
+      "moduleResolution": "node"
     }
   },
   "include": [
