--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
         "babel-plugin-i18next-extract": "^0.8.3",
         "circular-dependency-plugin": "^5.2.2",
         "copy-webpack-plugin": "^10.2.4",
-        "css-loader": "^6.6.0",
+        "css-loader": "^6.8.1",
         "cypress": "^12.12.0",
         "eslint": "^8.10.0",
         "eslint-config-airbnb": "^19.0.4",
@@ -131,6 +131,7 @@
         "@react-spring/web": "^9.5.2",
         "@reduxjs/toolkit": "^1.9.0",
         "@use-gesture/react": "^10.2.19",
+        "animate.css": "^4.1.1",
         "axios": "^0.26.1",
         "concurrently": "^7.0.0",
         "gsap": "npm:@gsap/member@^3.12.2",
