[fix] change nginx config for use static images on host

--- a/.deploy/nginx.conf
+++ b/.deploy/nginx.conf
@@ -17,6 +17,10 @@ server {
                 try_files $uri $uri/ /index.html;
         }
 
+        location ~ \.(gif|jpg|png)$ {
+            root /var/www/front-project/images;
+        }
+
 
     listen [::]:443 ssl ipv6only=on; # managed by Certbot
     listen 443 ssl; # managed by Certbot
