--- a/.deploy/nginx.conf
+++ b/.deploy/nginx.conf
@@ -17,8 +17,12 @@ server {
                 try_files $uri $uri/ /index.html;
         }
 
-        location ~ \.(gif|jpg|png)$ {
-            root /var/www/front-project/images;
+        location  ~ ^/images/(.*)$ {
+             proxy_pass   $scheme://45.137.152.20:8443/$1$is_args$args;
+             proxy_redirect     off;
+             proxy_set_header   Host             $host;
+             proxy_set_header   X-Real-IP        $remote_addr;
+             proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
         }
 
 
