[ref] global refactoring, adapting to mobile, some fix

--- a/.deploy/nginx.conf
+++ b/.deploy/nginx.conf
@@ -18,11 +18,7 @@ server {
         }
 
         location  ~ ^/images/(.*)$ {
-             proxy_pass   $scheme://45.137.152.20:8443/$1$is_args$args;
-             proxy_redirect     off;
-             proxy_set_header   Host             $host;
-             proxy_set_header   X-Real-IP        $remote_addr;
-             proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
+             root /var/www/front-project/html;
         }
 
 
